Added embeds -DJR

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
         <li>Enjoy being cool.</li>
     </ol>
     <a href="https://www.scoopwhoop.com/Life-Lessons-Calvin-And-Hobbes/">See #9 for cool tips.</a>
+
+    <br>
+    <h2>Here's a cool video... the content comes from a YouTube service:</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/4czjS9h4Fpg" title="YouTube video player" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <br>
+    <h2>Here's a cool map... the content comes from a Google Maps service:</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d365.91491179790415!2d-113.5301511101114!3d43.4413574076913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1624892671527!5m2!1sen!2sus" 
+    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
     <br><br>
     <button>Change User</button>
     <script src="scripts/main.js"></script>
