--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <br>
     <h2>Here's a cool video... the content comes from a YouTube service:</h2>
-    <iframe width="600" src="https://www.youtube.com/embed/4czjS9h4Fpg" title="YouTube video player" frameborder="0" 
+    <iframe width="600" height="340" src="https://www.youtube.com/embed/4czjS9h4Fpg" title="YouTube video player" frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <br>
